# minimc

./: .gitignore  CMakeLists.txt  install-nusvm.sh
.github/workflows/: build.yml
dependencies/: CMakeLists.txt  ctl-expr.cmake  leg-assembly-loader.cmake  leg.cmake
libs/: CMakeLists.txt
libs/CTPL/: CMakeLists.txt
libs/CTPL/algorithms/: BindingAtom.h  BindingClause.h  BindingSet.h
libs/CTPL/ctpl/: CMakeLists.txt  CtplOperator.h  ctplAtom.h  ctplPredicate.h  ctplTreeNode.h  ctplTreeNodeComparator.h
libs/CTPL/ctplparser/: CMakeLists.txt
libs/CTPL/parser/: ctplParserTreeConstants.h
libs/ctpl/: CMakeLists.txt
libs/ctpl/src/: CMakeLists.txt  ctl-checker.cpp  ctlanalysis.cpp
libs/ctpl/src/ctplalgorithms/: Binding.cpp  CMakeLists.txt
libs/ctpl/src/ctplformula/: CMakeLists.txt  Lexer.cpp  Tokens.cpp
libs/ctpl/src/ctplparser/: CMakeLists.txt
libs/loaders/: CMakeLists.txt
libs/loaders/src/: CMakeLists.txt
libs/loaders/src/arm/: CMakeLists.txt  armcontext.cpp  armcontext.hpp  converter.cpp  loader.cpp  loader2.cpp
libs/loaders/src/llvm/: context.cpp  context.hpp  loader.cpp
libs/minimc-ctl/: CMakeLists.txt
libs/minimc-ctl/include/: ctl.hpp  kripke.hpp
libs/minimc-ctl/include/minimc-ctl/: ctl-checker.hpp  (+1 more)
libs/minimc-ctl/src/: CMakeLists.txt  ctl-checker.cpp  ctl.cpp
libs/model/src/: types.cpp  variables.cpp
libs/model/tests/: CMakeLists.txt  typechecker.cpp
tests/programs/: CMakeLists.txt
tests/programs/ctl/: CMakeLists.txt  fakefork.ini.in  fakefork.ll  fork.ini.in  fork.ll  ptr.ini.in  ptr.ll
tests/programs/minimc/: assign.mmc
(+6 files in other folders)
